<resources>
    <!--common string-->
    <string name="app_name">加一</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_error">网络连接错误</string>
    <string name="server_error">服务器异常</string>
    <string name="timeout_error">网络连接超时</string>
    <string name="action_settings">设置</string>
    <string name="unset">未设置</string>
    <string name="confirm">确定</string>
    <string name="log_in_required">未登录</string>
    <string name="recommend_tab">热门</string>
    <string name="myself_tab">个人</string>
    <string name="camera_tab">相机</string>
    <string name="home_tab">话题</string>
    <string name="message_tab">通知</string>
    <string name="cancel">取消</string>
    <string name="submit">完成</string>
    <string name="nickname">昵称</string>
    <string name="personal_information">个人资料</string>
    <string name="password">密码</string>
    <string name="log_in">登录</string>
    <string name="log">确认登录</string>
    <string name="next_activity">下一步</string>
    <string name="to_reset_pwd">忘记密码？</string>
    <string name="to_register">立即注册</string>
    <string name="send_again">重新发送</string>
    <string name="log_out_confirm">确认退出登录？</string>
    <string name="unable_to_find_sd_card">没有SD卡!</string>
    <string name="save_changes">保存修改</string>
    <string name="save_sign">保存</string>
    <string name="telephone">电话</string>
    <string name="preferences">偏好</string>
    <string name="log_out">退出登录</string>
    <string name="notifications_from_app">推送通知</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="gallery">相册</string>
    <string name="security_code_sent">已发送验证码到：</string>
    <string name="register_finish_hint_nickname">您的注册昵称为</string>
    <string name="save_new_pwd">保存新密码</string>
    <string name="pwd_reset_succeed">密码修改成功</string>
    <string name="nickname_reset_succeed">昵称修改成功</string>
    <string name="sign_reset_succeed">个性签名修改成功</string>
    <string name="phone_reset_succeed">手机号修改成功</string>
    <string name="unknown_error">未知错误</string>
    <string name="post_created_days_ago">%d天前</string>
    <string name="post_created_hours_ago">%d小时前</string>
    <string name="post_created_minutes_ago">%d分钟前</string>
    <string name="post_just_created">刚刚</string>

    <!--activity titles-->
    <string name="register_step_one">注册（1/3）</string>
    <string name="register_step_two">注册（2/3）</string>
    <string name="register_step_two_seconds">%d秒</string>
    <string name="register_step_three">注册（3/3）</string>
    <string name="image_crop_error">图像截取错误</string>
    <string name="reset_pwd_step_one">重置密码（1/3）</string>
    <string name="reset_pwd_step_two">重置密码（2/3）</string>
    <string name="reset_pwd_step_three">重置密码（3/3）</string>
    <string name="pwd_reset">修改密码</string>
    <string name="app_about">关于</string>
    <string name="change_username_step_one">绑定新手机（1/2）</string>、
    <string name="change_username_step_two">绑定新手机（2/2）</string>
    <string name="change_nickname">修改昵称</string>
    <string name="change_personal_signature">修改签名</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="feedback_title">一起吐槽+1</string>
    <string name="publish_title">新话题</string>

    <!--card-->
    <string name="publish_add_image">发图片</string>
    <string name="publish_add_text">发文字</string>
    <string name="publish_text">文字</string>
    <string name="publish_image">图片</string>

    <string name="publish_confirm">确定</string>
    <string name="publish_publish">发布</string>
    <string name="publish_hint">为图片配上文字吧</string>
    <string name="publish_delete_image">删除当前照片</string>
    <string name="publish_input_text">只有文字也能引起热烈讨论呢</string>
    <string name="reply_to_user_format">回复%1$s: %2$s</string>
    <string name="reply_to_comment_format">回复%1$s: </string>
    <string name="reply">回复</string>


    <!--validation-->
    <string name="username_invalid_format">手机号格式不对哦</string>
    <string name="password_invalid_format">密码为6-20位字符哦</string>
    <string name="security_code_invalid_format">验证码为六位数字</string>
    <string name="password_confirmation_incorrect">两次输入密码不一致</string>
    <string name="password_incorrect">密码错误</string>
    <string name="old_password_incorrect">密码错误</string>
    <string name="security_code_incorrect">验证码错误</string>
    <string name="security_code_expired">验证码已过期</string>
    <string name="nickname_required">需要输入昵称</string>
    <string name="gender_required">需要选择性别</string>
    <string name="username_duplicated">用户名已注册</string>
    <string name="username_unknown">用户名不存在</string>
    <string name="post_text_required">内容不能为空</string>
    <string name="comment_text_required">评论内容不能为空</string>
    <string name="feedback_content_required">请输入反馈内容</string>

    <!--edit text hint-->
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_press_to_get_SCode">点击获得验证码</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_input_old_pwd">请输入旧密码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_new_pwd_confirm">请再次输入新密码</string>

    <string name="hint_personal_introduction">签名</string>
    <string name="hint_input_new_nickname">输入新昵称</string>
    <string name="hint_input_new_signature">输入新签名</string>
    <string name="hint_security_code">验证码</string>

    <!--gender-->
    <string name="set_gender">性别</string>
    <string name="set_gender_male">男</string>
    <string name="set_gender_female">女</string>
    <string name="gender_can_not_change">性别不可更改哦</string>

    <!--avatar and pictures-->
    <string name="change_personal_avatar">修改头像</string>
    <string name="change_personal_nickname">修改昵称</string>
    <string name="change_biography">修改个性签名</string>
    <string name="get_image_from_gallery">从相册选择</string>
    <string name="get_image_from_camera">拍照</string>
    <string name="title_activity_user_home">UserHomeActivity</string>

    <!--card details -->
    <string name="post_success">发送成功</string>
    <string name="send">发送</string>
    <string name="publish_comment">我也凑个热闹</string>
    <string name="post_failure">发送失败</string>
    <string name="bookmark_added">我就喜欢</string>
    <string name="bookmark_removed">不再喜欢</string>
    <string name="comment_success">参与+1</string>
    <string name="comment_failure">评论失败</string>
    <string name="reply_to_target">回复</string>
    <string name="image_processing_failure">图像处理失败</string>
    <string name="delete_current_post">删除当前话题</string>
    <string name="report_current_post">举报当前话题</string>
    <string name="post_report_success">已举报当前话题</string>
    <string name="post_report_duplicated">您已举报过当前话题</string>

    <string name="notification_comment_title">新的评论</string>
    <string name="notification_recommend_title">新的通知</string>
    <string name="notification_recommend">您的帖子被选为热门</string>
    <string name="notification_card">%s评论了你发布的帖子</string>
    <string name="notification_comment">%s回复了你的评论</string>
    <string name="message_card">评论了你发布的帖子</string>
    <string name="message_comment">回复了你的评论</string>


    <string name="title_activity_card_details">CardDetailsActivity</string>
    <!--user home text and hint-->
    <string name="myself_header_my_topic">我的话题</string>
    <string name="myself_header_favorite">我的收藏</string>

    <!--feedback text and hint-->
    <string name="feedback_text_hint">颜值低、没意思、太难用、总闪退，不吐槽+1都对不起自己！</string>
    <string name="feedback_contact_hint">我的手机号，等着充话费！</string>
    <string name="save_feedback">吐槽+1</string>
    <string name="feedback_success">反馈发送成功</string>

    <!--home text and hint-->
    <string name="home_pass_post">滚粗吧，无聊君~</string>
    <string name="home_spread_post">哎呦，不错哦！</string>

    <!--update versions-->
    <string name="update_versions_title">有新版本啦</string>

    <string name="home_no_publish">暂时没有发布过话题哟~</string>
    <string name="home_no_bookmark">暂时没有评论或喜欢过话题哟~</string>
    <string name="no_recommend">没有新的热门话题了</string>

    <string name="downloading_image">正在保存</string>
    <string name="downloading_finish">成功保存至</string>
    <string name="tv_save_storage">保存到手机</string>

    <string name="account_sign_in_error">您的账号在别处登录</string>
    <string name="notification_config_error">更新推送配置失败</string>
    <string name="download_apk_error">下载安装包失败</string>
    <string name="downloaded_apk_missing">找不到下载的安装包</string>
    <string name="apk_version_name">版本:%s</string>
    <string name="apk_about">关于加一 </string>
    <string name="feedbacks">意见反馈</string>
    <string name="update">版本更新</string>
    <string name="user_agreement">用户协议</string>
    <string name="copyright">北京思无疆科技有限公司</string>
    <string name="update_dialog">已是最新版,无需更新</string>
    <string name="back_again_to_exit">再按一次退出</string>
    <string name="quit_publishing">放弃编辑</string>
    <string name="clear_cache_confirm">确认清除？</string>

    <string name="comment_deleted">该评论已删除</string>
    <string name="delete_confirm">确认删除</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_failed">删除失败</string>

    <!-- oauth -->
    <string name="oauth_authenticate">正在获取授权</string>
    <string name="oauth_error">授权错误</string>
    <string name="oauth_get_platform_info">正在获取第三方账号信息</string>
    <string name="oauth_platform_info_error">获取第三方账号信息失败</string>

    <string name="recommend_message_detail">恭喜您的话题上了精选。快去看看吧。</string>

    <string name="event_recommends">活动精选</string>
    <string name="title_activity_event_recommend">EventRecommendActivity</string>

</resources>
