<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="swj.swj.activity.RegisterStepThree">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <swj.swj.common.RoundedImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/setNickName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"></swj.swj.common.RoundedImageView>

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:layout_above="@+id/et_password"
        android:layout_marginBottom="24dp"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignEnd="@+id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_gender"
        android:layout_above="@+id/registerStepThreeMessage"
        android:layout_alignLeft="@+id/setPwd"
        android:layout_alignStart="@+id/setPwd"
        android:layout_marginBottom="35dp" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/registerGenderSet"
        android:layout_alignRight="@+id/setPwd"
        android:layout_alignEnd="@+id/setPwd">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_gender_male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_gender_female" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/registerGenderSet"
        android:layout_alignStart="@+id/registerGenderSet"
        android:layout_alignRight="@+id/setPwd"
        android:layout_alignEnd="@+id/setPwd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_can_not_change"
        android:id="@+id/tv_message"
        android:layout_above="@+id/finishRegisger"
        android:layout_alignLeft="@+id/finishRegisger"
        android:layout_alignStart="@+id/finishRegisger"
        android:layout_marginBottom="27dp" />
</menu>
