<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="swj.swj.activity.LoginActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/btn_login_submit"
        android:layout_marginTop="95dp"
        android:layout_below="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignEnd="@+id/et_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/et_username"
        android:layout_marginTop="84dp"
        android:hint="@string/hint_input_phone"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_username"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:layout_marginTop="36dp"
        android:hint="@string/hint_input_pwd"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_reset_pwd"
        android:id="@+id/tv_to_reset_pwd"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/btn_login_submit"
        android:layout_alignLeft="@+id/btn_login_submit"
        android:layout_alignStart="@+id/btn_login_submit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_register"
        android:id="@+id/tv_to_register"
        android:layout_alignTop="@+id/tv_to_reset_pwd"
        android:layout_alignRight="@+id/btn_login_submit"
        android:layout_alignEnd="@+id/btn_login_submit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/tv_login_error_message"
        android:layout_below="@+id/et_password"
        android:layout_alignLeft="@+id/btn_login_submit"
        android:layout_alignStart="@+id/btn_login_submit"
        android:layout_marginTop="40dp" />

</RelativeLayout>
