<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <swj.swj.view.ActionBarLayout
        android:id="@+id/action_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/action_bar_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        custom:page_title="@string/pwd_reset" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_text_height"
        android:layout_marginLeft="@dimen/profile_text_margin_horizontal"
        android:layout_marginRight="@dimen/profile_text_margin_horizontal"
        android:layout_marginTop="@dimen/profile_margin_between_module"
        android:background="@color/profile_input_background"
        android:hint="@string/hint_input_old_pwd"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/profile_text_padding"
        android:textColorHint="@color/profile_hint_text"
        android:textSize="@dimen/settings_common_text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_text_height"
        android:layout_marginLeft="@dimen/profile_text_margin_horizontal"
        android:layout_marginRight="@dimen/profile_text_margin_horizontal"
        android:layout_marginTop="@dimen/profile_edit_margin_top"
        android:background="@color/profile_input_background"
        android:hint="@string/hint_input_new_pwd"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/profile_text_padding"
        android:textColorHint="@color/profile_hint_text"
        android:textSize="@dimen/settings_common_text" />

    <EditText
        android:id="@+id/et_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_text_height"
        android:layout_marginLeft="@dimen/profile_text_margin_horizontal"
        android:layout_marginRight="@dimen/profile_text_margin_horizontal"
        android:layout_marginTop="@dimen/profile_edit_margin_top"
        android:background="@color/profile_input_background"
        android:hint="@string/hint_new_pwd_confirm"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/profile_text_padding"
        android:textColorHint="@color/profile_hint_text"
        android:textSize="@dimen/settings_common_text" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_text_height"
        android:layout_marginLeft="@dimen/profile_text_margin_horizontal"
        android:layout_marginRight="@dimen/profile_text_margin_horizontal"
        android:layout_marginTop="@dimen/profile_edit_margin_top"
        android:background="@color/common_yellow"
        android:text="@string/save_changes"
        android:textColor="@color/profile_common_text"
        android:textSize="@dimen/settings_common_text" />

</LinearLayout>