<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TranslucentNoTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:text="@string/get_image_from_camera"
        android:textColor="@color/common_button_text_color"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/tv_camera"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:text="@string/get_image_from_gallery"
        android:textColor="@color/common_button_text_color"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/tv_gallery"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/common_button_text_color"
        android:textSize="18dp" />
</RelativeLayout>
