<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">


    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_title_size"
        android:background="@color/settings_top_bar_blue">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/action_settings"
            android:textColor="@color/common_white_bg"
            android:textSize="18sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_personal_settings_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_username_size"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/settings_logout_margin_top"
        android:background="@color/common_white_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/settings_common_margin_left"
        android:text="昵称"
        android:textColor="@color/personal_common_female_username"
        android:textSize="@dimen/settings_common_text" />


    <TextView
        android:id="@+id/tv_personal_settings_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_title_size"
        android:layout_below="@+id/tv_personal_settings_nickname"
        android:layout_marginTop="1dp"
        android:background="@color/common_white_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/settings_common_margin_left"
        android:text="@string/personal_information"
        android:textColor="@color/settings_common_title"
        android:textSize="@dimen/settings_common_text" />


    <TextView
        android:id="@+id/tv_settings_preference_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_title_size"
        android:layout_below="@+id/tv_personal_settings_profile"
        android:layout_marginTop="@dimen/settings_preference_margin_top"
        android:background="@color/common_white_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/settings_common_margin_left"
        android:text="@string/preferences"
        android:textColor="@color/settings_title_color"
        android:textSize="@dimen/settings_common_text" />

    <TextView
        android:id="@+id/tv_notification_switch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_title_size"
        android:layout_below="@+id/tv_settings_preference_title"
        android:layout_marginTop="1dp"
        android:background="@color/common_white_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/settings_common_margin_left"
        android:text="@string/notifications_from_app"
        android:textColor="@color/settings_common_title"
        android:textSize="@dimen/settings_common_text" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_notification_switch"
        android:layout_marginRight="@dimen/settings_common_margin_left"
        android:layout_marginTop="@dimen/settings_switch_margin"
        android:gravity="center_vertical"
        android:showText="true"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <TextView
        android:id="@+id/tv_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_title_size"
        android:layout_below="@+id/tv_notification_switch"
        android:layout_marginTop="@dimen/settings_preference_margin_top"
        android:background="@color/common_white_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/settings_common_margin_left"
        android:text="清除缓存"
        android:textColor="@color/settings_common_title"
        android:textSize="@dimen/settings_common_text" />


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_title_size"
        android:layout_below="@+id/tv_clear_cache"
        android:layout_marginLeft="@dimen/settings_logout_margin_horizontal"
        android:layout_marginRight="@dimen/settings_logout_margin_horizontal"
        android:layout_marginTop="@dimen/settings_logout_margin_top"
        android:background="@color/common_yellow"
        android:text="@string/log_out"
        android:textSize="@dimen/settings_common_text" />

</RelativeLayout>