<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_white_bg">

    <com.oneplusapp.view.ActionBarLayout
        android:id="@+id/action_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/action_bar_height"
        custom:page_title="@string/register_step_three" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/action_bar"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:src="@drawable/default_user_avatar"
        app:border_color="@color/common_yellow"
        app:border_width="@dimen/common_avatar_image_border" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/register_image_phone_width_height"
        android:layout_height="@dimen/register_image_phone_width_height"
        android:layout_below="@id/iv_avatar"
        android:layout_marginLeft="@dimen/register_margin_left_phone_image"
        android:layout_marginTop="25dp"
        android:src="@drawable/username" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_image_phone_width_height"
        android:layout_alignTop="@id/imageView5"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="@dimen/common_margin_left_right"
        android:layout_toRightOf="@id/imageView5"
        android:background="@null"
        android:gravity="bottom"
        android:hint="@string/nickname"
        android:maxLength="20"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/common_hint_text_size" />

    <TextView
        android:id="@+id/register_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_margin_line_height"
        android:layout_below="@id/et_nickname"
        android:layout_marginLeft="@dimen/register_margin_left_phone_image"
        android:layout_marginRight="@dimen/register_margin_left_phone_image"
        android:layout_toLeftOf="@+id/btn_resend_security_code"
        android:background="@color/home_title_color" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/register_image_phone_width_height"
        android:layout_height="@dimen/register_image_phone_width_height"
        android:layout_below="@id/register_line"
        android:layout_marginLeft="@dimen/register_margin_left_phone_image"
        android:layout_marginTop="25dp"
        android:src="@drawable/password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_image_phone_width_height"
        android:layout_alignTop="@id/imageView6"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="@dimen/common_margin_left_right"
        android:layout_toRightOf="@id/imageView6"
        android:background="@null"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_color"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/common_hint_text_size" />

    <TextView
        android:id="@+id/register_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_margin_line_height"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="@dimen/register_margin_left_phone_image"
        android:layout_marginRight="@dimen/register_margin_left_phone_image"
        android:layout_toLeftOf="@+id/btn_resend_security_code"
        android:background="@color/home_title_color" />


    <TextView
        android:id="@+id/iv_gender"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/register_line2"
        android:layout_centerVertical="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/set_gender"
        android:textColor="@color/register_three_gender"
        android:textSize="@dimen/register_security_code" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_gender"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:text="@string/set_gender_male"
            android:textColor="@color/register_three_gender" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_gender_female"
            android:textColor="@color/register_three_gender" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_gender"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/gender_can_not_change"
        android:textColor="@color/register_three_gender"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/common_margin_left_right"
        android:layout_marginRight="@dimen/common_margin_left_right"
        android:background="@color/common_yellow"
        android:layout_marginBottom="50dp"
        android:text="@string/submit"
        android:textColor="@color/common_button_text_color"
        android:textSize="@dimen/common_yellow_button_text_size" />
</RelativeLayout>
