<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_card_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/new_card_text_color"
            android:text="@string/publish_text"
            android:textSize="@dimen/home_title_text_size" />

        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/publish_publish"
            android:paddingRight="14dp"
            android:textColor="@color/new_card_text_color"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/iv_use_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:scaleType="centerInside"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@color/home_title_color" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="top"
        android:textCursorDrawable="@null"
        android:layout_margin="10dp"
        android:hint="@string/publish_input_text" />
</LinearLayout>